Logger/LogOutput/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: log-output-strip-prefix
  namespace: logger
spec:
  stripPrefix:
    prefixes:
      - /log-output
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: logger
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: logger-log-output-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /log-output
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
