Logger/LogOutput/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: logger
spec:
  parentRefs:
    - name: logger-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /log-output
      backendRefs:
        - name: log-output-svc
          port: 2345
